# be_notifier_home_assignment

./: .flake8  README.md  pyproject.toml  pyrightconfig.json  run.sh
be_notifier/: entities.py  notify.py  rules.py
docs/: Notifier Home Assignment.docx
tests/: company_competitor_test.py  event_test.py
