[tool.poetry]
name = "be_notifier"
version = "0.1.0"
description = ""
authors = ["Michal Lipinski <michal.lipinski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pyright = "^1.1.236"
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120